--- a/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_registration.xml
+++ b/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_registration.xml
@@ -94,9 +94,8 @@
         android:layout_height="30dp"
         android:layout_marginStart="4dp"
         android:background="@color/white"
-
         android:hint="Password:"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_Password"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,9 +107,8 @@
         android:layout_width="202dp"
         android:layout_height="30dp"
         android:background="@color/white"
-
         android:hint="Confirm Password:"
-        android:inputType="textPersonName"
+        android:inputType="textPassword"
         android:text=""
         app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_ConfirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +120,6 @@
         android:layout_width="202dp"
         android:layout_height="30dp"
         android:background="@color/white"
-
         android:hint="Email:"
         android:inputType="textPersonName"
         android:text=""
