--- a/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_registration.xml
+++ b/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_registration.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E6C1C1"
     tools:context=".RegistrationActivity">
 
     <TextView
@@ -11,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="108dp"
-        android:text="Registration"
+        android:fontFamily="@font/fredoka_one"
+        android:text="Sign Up"
         android:textSize="40dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,6 +26,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:text="Username:"
+        android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/activity_registration_tv_RegistrationTitle"
         app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,10 +38,12 @@
         android:id="@+id/activity_registration_tv_Password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="120dp"
         android:text="Password:"
+        android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/activity_registration_tv_Username"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="@+id/activity_registration_tv_Username"
         app:layout_constraintTop_toBottomOf="@+id/activity_registration_tv_Username" />
 
@@ -45,10 +51,12 @@
         android:id="@+id/activity_registration_tv_ConfirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="160dp"
         android:text="Confirm Password:"
+        android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/activity_registration_tv_Password"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.046"
         app:layout_constraintStart_toStartOf="@+id/activity_registration_tv_Password"
         app:layout_constraintTop_toBottomOf="@+id/activity_registration_tv_Password" />
 
@@ -58,6 +66,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="Email:"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/activity_registration_tv_Bios"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/activity_registration_tv_Bios"
@@ -69,6 +78,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="Bios:"
+        android:textSize="18sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/activity_registration_tv_ConfirmPassword"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/activity_registration_tv_ConfirmPassword"
@@ -83,10 +94,13 @@
         android:hint="Username:"
         android:inputType="textPersonName"
         android:text=""
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_Username"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toEndOf="@+id/activity_registration_tv_Username"
-        app:layout_constraintTop_toTopOf="@+id/activity_registration_tv_Username" />
+        app:layout_constraintTop_toTopOf="@+id/activity_registration_tv_Username"
+        app:layout_constraintVertical_bias="1.0" />
 
     <EditText
         android:id="@+id/activity_registration_et_Password"
@@ -98,6 +112,7 @@
         android:hint="Password:"
         android:inputType="textPersonName"
         android:text=""
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_Password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/activity_registration_tv_Password"
@@ -112,6 +127,7 @@
         android:hint="Confirm Password:"
         android:inputType="textPersonName"
         android:text=""
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_ConfirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/activity_registration_tv_ConfirmPassword"
@@ -121,15 +137,16 @@
         android:id="@+id/activity_registration_et_Email"
         android:layout_width="202dp"
         android:layout_height="30dp"
-        android:background="@color/white"
 
+        android:background="@color/white"
         android:hint="Email:"
         android:inputType="textPersonName"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_Email"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toEndOf="@+id/activity_registration_tv_Email"
-        app:layout_constraintTop_toTopOf="@+id/activity_registration_tv_Email" />
+        tools:layout_editor_absoluteY="350dp" />
 
     <EditText
         android:id="@+id/activity_registration_et_Bios"
@@ -140,20 +157,89 @@
         android:inputType="textPersonName"
         android:maxLines="5"
         android:text=""
-        app:layout_constraintBottom_toBottomOf="@+id/activity_registration_tv_Bios"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/activity_registration_tv_Bios"
-        app:layout_constraintTop_toTopOf="@+id/activity_registration_tv_Bios" />
+        android:visibility="gone"
+        tools:layout_editor_absoluteX="76dp"
+        tools:layout_editor_absoluteY="440dp" />
 
     <Button
         android:id="@+id/activity_registration_btn_registration"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/activity_registration_et_Bios"
-        app:layout_constraintStart_toStartOf="@+id/activity_registration_tv_Email"
-        app:layout_constraintTop_toBottomOf="@+id/activity_registration_et_Email" />
+        android:layout_width="131dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="36dp"
+        android:text="Submit"
+        android:textSize="18sp"
+        app:backgroundTint="#1AC3C3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_registration_et_Bios1" />
+
+    <EditText
+        android:id="@+id/activity_registration_et_Username1"
+        android:layout_width="180dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:background="@android:drawable/editbox_background"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_registration_tv_RegistrationTitle" />
+
+    <EditText
+        android:id="@+id/activity_registration_et_Password1"
+        android:layout_width="180dp"
+        android:layout_height="39dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:drawable/editbox_background"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_registration_et_Username1" />
+
+    <EditText
+        android:id="@+id/activity_registration_et_ConfirmPassword1"
+        android:layout_width="180dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:ems="10"
+        android:hint="Confirm Password"
+        android:inputType="textPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_registration_et_Email1" />
+
+    <EditText
+        android:id="@+id/activity_registration_et_Email1"
+        android:layout_width="180dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:drawable/editbox_background"
+        android:ems="10"
+        android:hint="Email Address"
+        android:inputType="textPersonName"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_registration_tv_RegistrationTitle" />
+
+    <EditText
+        android:id="@+id/activity_registration_et_Bios1"
+        android:layout_width="380dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="24dp"
+        android:background="@android:drawable/editbox_background"
+        android:ems="10"
+        android:gravity="start|top"
+        android:hint="About Yourself"
+        android:inputType="textMultiLine"
+        android:maxLines="5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_registration_et_Password1" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
