Layout, Meme Template, Profile and Edit Activities

--- a/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_meme.xml
+++ b/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_meme.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E6C1C1"
     tools:context=".MemeActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/activity_meme_rv_memes"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/activity_meme_btn_upload"
-        />
+        android:layout_width="388dp"
+        android:layout_height="657dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.864" />
 
     <TextView
         android:id="@+id/activity_meme_tv_Username"
-        android:layout_width="73dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="-1dp"
-        android:layout_toRightOf="@+id/activity_meme_btn_upload"
-        android:text="Text"
-        android:textSize="30dp" />
-
-    <Button
-        android:layout_centerHorizontal="true"
-        android:text="Upload"
-        android:id="@+id/activity_meme_btn_upload"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="16dp"
+        android:fontFamily="@font/fredoka_one"
+        android:shadowColor="#6C3A3A"
+        android:shadowDx="10"
+        android:shadowDy="10"
+        android:shadowRadius="5"
+        android:text="Text"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/activity_meme_btn_upload"
+        android:layout_width="101dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:text="Upload"
+        app:backgroundTint="#1AC3C3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
