--- a/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_upload_meme.xml
+++ b/MachineProject_HotnSpicyMemes/app/src/main/res/layout/activity_upload_meme.xml
@@ -1,77 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E6C1C1"
     tools:context=".UploadMeme">
+
 
     <Spinner
         android:id="@+id/spinner_catergory"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/btn_chooseFile"
-        android:layout_alignTop="@+id/btn_chooseFile"
-        android:layout_alignEnd="@+id/btn_chooseFile"
-        android:layout_marginStart="-2dp"
-        android:layout_marginTop="61dp"
-        android:layout_marginEnd="2dp" />
+        android:layout_width="131dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintStart_toStartOf="@+id/btn_chooseFile"
+        app:layout_constraintTop_toBottomOf="@+id/btn_chooseFile" />
 
     <Button
         android:id="@+id/btn_chooseFile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Choose File" />
-
-
-
-
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Choose File"
+        app:backgroundTint="#1AC3C3"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/et_filename"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_toEndOf="@+id/btn_chooseFile"
+        android:layout_width="231dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="12dp"
+        android:background="@android:drawable/editbox_background"
         android:hint="Enter file name"
-        android:layout_marginStart="16dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btn_Upload"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="Upload" />
+        android:layout_width="114dp"
+        android:layout_height="51dp"
+        android:layout_marginBottom="8dp"
+        android:text="Upload"
+        app:backgroundTint="#1AC3C3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/iv_displayupload"
         android:layout_width="382dp"
         android:layout_height="517dp"
-        android:layout_above="@id/pd_loading"
-        android:layout_below="@id/et_filename"
-        android:layout_marginTop="57dp" />
+        android:layout_marginTop="44dp"
+        android:layout_marginBottom="12dp"
+        app:layout_constraintBottom_toTopOf="@id/pd_loading"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_filename"
+        app:layout_constraintVertical_bias="0.705" />
 
     <androidx.core.widget.ContentLoadingProgressBar
         android:id="@+id/pd_loading"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:layout_above="@id/btn_Upload"
-        android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintBottom_toTopOf="@id/btn_Upload"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/tv_showUploads"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
-        android:layout_alignBaseline="@id/btn_Upload"
-        android:layout_alignTop="@id/btn_Upload"
-        android:layout_alignBottom="@id/btn_Upload"
         android:layout_marginStart="25dp"
         android:layout_marginTop="-6dp"
-        android:layout_toEndOf="@id/btn_Upload"
         android:gravity="center"
         android:text="Show Uploads"
-        android:textSize="16dp" />
+        android:textSize="16dp"
+        app:layout_constraintBaseline_toBaselineOf="@id/btn_Upload"
+        app:layout_constraintBottom_toBottomOf="@id/btn_Upload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@id/btn_Upload"
+        app:layout_constraintTop_toTopOf="@id/btn_Upload"
+        app:layout_constraintVertical_bias="0.636" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
